--- a/src/components/CardEventItem/CardEventItem.css
+++ b/src/components/CardEventItem/CardEventItem.css
@@ -4,6 +4,9 @@
   padding: 5px 15px;
   border-radius: 100px;
 }
+.eventName {
+  font-size: 0.8rem;
+}
 .cardEventHeaderIcon {
 }
 .cardEventHeaderIcon img {
@@ -25,6 +28,9 @@
 .eventPanelBody .eventpannelBody_head,
 .videoHead {
   font-family: "DAKBold";
+}
+.eventPanelBody_body {
+  font-size: 0.8rem;
 }
 .videoHead {
   border-bottom: 1px solid #7b755d;
