--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -22,7 +22,7 @@
 }
 .title {
   font-family: "DAKBold";
-  font-size: 20px;
+  font-size: 1.12499994rem;
 }
 .collapedNavBar {
   position: absolute;
